--- a/src/page/slide.css
+++ b/src/page/slide.css
@@ -23,7 +23,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
   }
   
   .swiper-pagination-bullet {
@@ -39,13 +38,35 @@
   .swiper-pagination-bullet {
     opacity: 0.5;
   }
-  .swiper-pagination-bullet-active, .pagi {
+  .swiper-pagination-bullet-active {
     border-radius: 5px;
     color: #fff;
     background: #007aff;
     border: 1px solid red;
     overflow: hidden;
     opacity: 1;
+  }
+  .thumbnails {
+    width: 80px; 
+    height: 80px;
+    display: inline-block;
+  }
+  @media (max-width: 745px) {
+    .thumbnails {
+      width: 50px;
+      height: 60px;
+    }
+    .swiper-pagination {
+      padding: 5px 0;
+      background-color: #1c1c1c00;
+      
+    }
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
   .swiper-wrapper {
     height: calc(100% - 130px);
